# Mathlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Mathlib.hpp
src/: Color.hpp  Math.cpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
